# nifty-scalping-engine

./: .gitignore  ARCHITECTURE.txt  CMakeLists.txt  COMMANDS.txt  README.md  auto-trading-app  build.sh  check_env.sh  keep_alive.sh  mount_vm.sh  run.sh  setup.sh  setup_remote_ssh.sh  sync_to_vm.sh  trading.service  trading_app.service
include/: AngelOneLogin.hpp  AngelOneParser.hpp  Config.hpp  InstrumentFilter.hpp  MarketData.hpp  OrderManager.hpp  StrategyEngine.hpp  WebSocketClient.hpp
src/: main.cpp  trading-bot.service
